Added demo for REST API "/circuits".

--- a/Orbot-rc-example/Info.plist
+++ b/Orbot-rc-example/Info.plist
@@ -17,5 +17,10 @@
 	<array>
 		<string>orbot</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
